--- a/v3/demo/sigmaPoint/drawWallFig.ipynb
+++ b/v3/demo/sigmaPoint/drawWallFig.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "demanding-lottery",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
       " [1271    2]], shape=(5, 2), dtype=int64)\n",
       "used tf.Tensor([[4 5 0 3 2]], shape=(1, 5), dtype=int64)\n",
       "missing tf.Tensor([[1]], shape=(1, 1), dtype=int64)\n",
-      "z tf.Tensor([[0]], shape=(1, 1), dtype=int64)\n",
+      "z tf.Tensor([[51]], shape=(1, 1), dtype=int64)\n",
       "OG_rads tf.Tensor(\n",
       "[[62.233017 55.3377   51.28682  51.299477 52.1207   52.549694]\n",
       " [55.97538  59.062405 50.991444 52.13219  52.109894 52.91746 ]\n",
@@ -158,7 +158,7 @@
       " [ 0.       54.902714  0.        0.        0.        0.      ]\n",
       " [ 0.       62.251385  0.        0.        0.        0.      ]], shape=(1304, 6), dtype=float32)\n",
       "tf.Tensor([[55.97538  59.062405 50.991444 52.13219  52.109894 52.91746 ]], shape=(1, 6), dtype=float32)\n",
-      "tf.Tensor([[0 1]], shape=(1, 2), dtype=int64)\n",
+      "tf.Tensor([[51  1]], shape=(1, 2), dtype=int64)\n",
       "\n",
       " jumps after fix tf.Tensor(\n",
       "[[ 102    4]\n",
@@ -166,13 +166,13 @@
       " [ 945    0]\n",
       " [1257    3]\n",
       " [1271    2]\n",
-      " [   0    1]], shape=(6, 2), dtype=int64)\n",
+      " [  51    1]], shape=(6, 2), dtype=int64)\n",
       "jumps_i 0  \n",
       " [[  0   0]\n",
       " [945   0]]\n",
       "jumps_i 1  \n",
-      " [[0 1]\n",
-      " [0 1]]\n",
+      " [[ 0  1]\n",
+      " [51  1]]\n",
       "jumps_i 2  \n",
       " [[   0    2]\n",
       " [1271    2]]\n",
@@ -188,7 +188,7 @@
       "\n",
       " bounds tf.Tensor(\n",
       "[[51.98115921 63.12488174]\n",
-      " [ 0.          0.        ]\n",
+      " [51.46256638 52.15077591]\n",
       " [50.21660233 52.54222488]\n",
       " [50.65130234 53.3983345 ]\n",
       " [51.7817688  52.79418182]\n",
@@ -198,18 +198,18 @@
       " tf.Tensor([0. 0. 0. 0. 0. 0.], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.01733368 -0.01454631 -0.00047772  0.02955848  0.03965605  0.01620618], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.017345   -0.01456089 -0.0004775   0.02958992  0.03967641  0.01621143], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.06721392 -0.05543994 -0.01301818  0.01413288  0.01808962  0.01371247], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.0883401  -0.06687941 -0.00479516  0.00773568  0.00963523  0.01253494], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.09479587 -0.07807601 -0.01972976  0.00423315  0.00561262  0.01068438], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.08890845 -0.06725936 -0.0048116   0.0070751   0.00963649  0.01119591], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
-      " tf.Tensor([-0.09907006 -0.08155736 -0.02082964  0.00203404  0.00338035  0.00996322], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([-0.09170675 -0.06931966 -0.00490938  0.00623572  0.00849715  0.0109797 ], shape=(6,), dtype=float32)\n",
       "pred_stds: \n",
-      " tf.Tensor([0.00680896 0.00555848 0.00167801 0.00248804 0.00310088 0.00054405], shape=(6,), dtype=float32)\n",
+      " tf.Tensor([0.00681324 0.00556286 0.00168061 0.00249018 0.00310417 0.00053138], shape=(6,), dtype=float32)\n",
       " L2: \n",
       " tf.Tensor(\n",
       "[[1. 0. 0. 0. 0. 0.]\n",
@@ -223,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9347bbdb8a5f4088a93e5d5e9c50c8a1",
+       "model_id": "2221e0c4d0d44961ab0e6305348082c3",
        "version_major": 2,
        "version_minor": 0
       },
